devscripts (2.9.8) UNRELEASED; urgency=low

  * bts: don't require user for usertags (Closes: #326560)
  * uupdate: handle csae of debian/ directory in upstream sources (Closes:
    #320836)

 -- Julian Gilbey <jdg@polya.uklinux.net>  Tue,  6 Sep 2005 02:19:17 +0100

devscripts (2.9.7) unstable; urgency=low

  * bts: oops, left out a space in usertags command

 -- Julian Gilbey <jdg@polya.uklinux.net>  Sun,  4 Sep 2005 01:51:24 +0100

devscripts (2.9.6) unstable; urgency=low
  
  [ Julian Gilbey ]
  * bts: tags: revert change in 2.9: reinstate "fixed-in-experimental" (it
    still appears to be in use) and don't need "help" twice (Closes: #325480)
  * bts: show/cache: lots of changes to make compatible with new BTS HTML
    pages (Closes: #325966)
    Also store devscripts version with cached files, so that such changes
    can be handled more smoothly in future.
  * bts: small cleanups for output messages, minor bugfixes etc.
  * bts: introduce spam command to report spam in bug reports
  * bts: support new user/usertags commands (Closes: #326265)
  * checkbashisms: correctly detect "function" keyword (Closes: #324599)
  * uscan: report on package being scanned when --report is used (Closes:
    #324102)
  * uscan: provide --report-status option to distinguish from --report,
    which is now quieter (Closes: #325097, #325980)

  [ Filippo Giunchedi ]
  * uscan: fixed some repeated tags when used with --dehs
  * uscan: expand some entities in dehs_output
  * bts: download bugs.css and use it (Closes: #323781)
  * bts: remove some old cache handling cruft since sarge is released

  [ Joey Hess ]
  * dd-list: add --dctrl option for quick reading from grep-dctrl.
  * grep-excuses: remove special case for running locally on ftp-master,
    which breaks every time ftp-master moves (or directories are reorganised),
    and only saved some loopback traffic anyway.
  * grep-excuses: fix non-robust html parsing that caused ugly messages